--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -25,8 +25,10 @@ $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
-$primary:       $orange !default;
-$secondary:     $gray-600 !default;
+$primary:  #A3A5C3 !default;
+
+$primary:       $primary !default;
+$secondary:     $gray-300 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
