--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -3,4 +3,5 @@
 @import "global.scss";
 @import "nav.scss";
 @import "resume-item.scss";
+@import "portfolio.scss";
 @import "bootstrap-overrides.scss";
