--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
+$gray-200: #f1f2f3 !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
@@ -25,9 +25,7 @@ $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
-$primary:  #A3A5C3 !default;
-
-$primary:       $primary !default;
+$primary:       $orange !default;
 $secondary:     $gray-300 !default;
 $success:       $green !default;
 $info:          $cyan !default;
