--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -4,4 +4,5 @@
 @import "nav.scss";
 @import "resume-item.scss";
 @import "portfolio.scss";
+@import "skills.scss";
 @import "bootstrap-overrides.scss";
