--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,5 +1,5 @@
   .container-skills{
-    width: 95%;
+    width: 93%;
     margin-right: auto;
     padding: 0px 40px;
     .fab, .fa{
@@ -44,17 +44,24 @@
     opacity: 0.75;
     padding: 5px 0 5px 10px;
     border-radius: inherit;
-    animation: load 2s 0s;
-    -webkit-animation: load 2s 0s;
-    -moz-animation: load 2s 0s;
-    -o-animation: load 2s 0s;
+    animation: load 5s 0s;
+    -webkit-animation: load 5s 0s;
+    -moz-animation: load 5s 0s;
+    -o-animation: load 5s 0s;
   }
+
   
-  .bar.front::before{
-    background-color: $primary;
+  .bar.first::before{
+    background-color: $tech-primary;
   }
-  .bar.back::before{
-    background-color: $red;
+  .bar.second::before{
+    background-color: $tech-secondary;
+  }
+  .bar.tertiary::before{
+    background-color: $tech-tertiary;
+  }
+  .bar.cuaternary::before{
+    background-color: $tech-cuaternary;
   }
   
   .bar.learning::before{
@@ -66,6 +73,15 @@
   .bar.intermediate::before{
     width: calc(60% - 10px);
   }
+  .bar.good::before{
+    width: calc(65% - 10px);
+  }
+  .bar.very-good::before{
+    width: calc(70% - 10px);
+  }
+  .bar.great::before{
+    width: calc(75% - 10px);
+  }
   .bar.advanced::before{
     width: calc(80% - 10px);
   }
@@ -73,3 +89,10 @@
     width: calc(88% - 10px);
   }
 
+  @media(max-width:767px) {
+    .container-skills{
+        width: 100%;
+        margin-right: auto;
+        padding: 0px 10px 0px 40px;
+    }
+  }
