--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -36,4 +36,9 @@ $dark:          $gray-800 !default;
 
 // Page Variables
 
+$tech-primary:       $gray-600 !default;
+$tech-secondary:     $red !default;
+$tech-tertiary:      $orange !default;
+$tech-cuaternary:    $purple !default;
+
 $sidebar-base-width: 17rem;
