--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -86,3 +86,54 @@ p.lead {
     }
   }
 }
+
+
+.tag{
+  padding: 7px 7px;
+  line-height: 1.9 !important;
+  color: white;
+  font-size: 12px;
+  border-radius: 10px;
+  margin: 7px 2px;
+  opacity: 0.75;
+
+  .first{
+      background-color: $tech-primary;
+      &:hover{
+        opacity: 1;
+      }
+  }
+  .second{
+      background-color: $tech-secondary;
+      &:hover{
+        opacity: 1;
+      }
+  }
+  .tertiary{
+      background-color: $tech-tertiary;
+      &:hover{
+        opacity: 1;
+      }
+  }
+  .cuaternary{
+      background-color: $tech-cuaternary;
+      &:hover{
+        opacity: 1;
+      }
+  }
+}
+
+@media(max-width:340px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    word-break: break-word;
+  }
+
+  .tag{
+    word-break: break-word;
+  }
+}
